Fix layout overflow on mobile

--- a/web_modules/components/Avatar/Avatar.scss
+++ b/web_modules/components/Avatar/Avatar.scss
@@ -14,6 +14,12 @@
   }
 }
 
+@media (max-width: 768px) {
+  .name {
+    white-space: initial;
+  }
+}
+
 .subTitle {
   color: $color-text;
 }
